src/test/resources/validPrograms/infinite_hello.frj
class Message {
	method String getMsg() = "Hi :-)\n";
}

main = new Std().@print(new Message().@getMsg());
