src/test/resources/invalidPrograms/returnTypeExists.frj
class A {
	method Bar foo() = 0;
}

main = 0;
